manifests/cilium-extra/base/hubble-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  parentRefs:
    - name: web-with-auth
      namespace: gateway
  hostnames:
    - hubble.$k8s-domain.ictsc.net
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-ui
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/component: proxy
            gateway.envoyproxy.io/owning-gatewayclass: web-gateway
      toPorts:
        - ports:
            - port: http
              protocol: TCP
